tests/architecture/fixtures/invalid/order-command-boundaries/core-order-writer.ts
export function invalidCoreOrderWriter(store: { replaceOrderCommandRecords(records: unknown[]): void }) {
  store.replaceOrderCommandRecords([]);
}
